# llm-moral-foundations2

./: .gitignore  README.md  mjc_research_journal.md  pyproject.toml
data/: repeng_trunacted_outputs.json5
data/mcf/: vignettes.csv
data/steering/: _entities.json5  _suffixes.json5  amoral.json  amoral.json5  chaos.json5  credulity.json  credulity.json5  detached.json5  good.json5  honesty.json  honesty.json5  powerful.json  powerful.json5  scenario_engagement_dataset.json  virtue.json5
llm_moral_foundations2/: __init__.py  data.py  hf.py  load_model.py  steering.py  utils.py
llm_moral_foundations2/gather/: choice_tokens.py  cot.py
llm_moral_foundations2/helpers/: plot_traj.py
nbs/: 01_gather_data.py  02_analyse.ipynb  06_try_CoT_rating copy.ipynb  06_try_CoT_rating.ipynb  06_willy_wonka.ipynb  07sglang.ipynb  08_dailydilema_virtue.ipynb  08_dailydilema_virtue_qwen 30A3B.ipynb  08_gather_hf_steer_dailydilema.ipynb  09_analyse_dailydilema.ipynb  10_how_to_steer_thinking_models.ipynb  make_steer_ds.ipynb  results.parquet
nbs/mcf_vignettes/: 01_gather_data_hf_logprobs.py
nbs/old/: 08_dailydilema_virtue_qwen 30A3B.ipynb
