[project]
name = "llm_moral_foundations2"
version = "0.1.0"
description = "Add your description here"
license = { "text" = "MIT"}
readme = "README.md"
authors = [
    { name = "wassname", email = "1103714+wassname@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.6.0",
    "anycache>=2.4.0",
    "bitsandbytes>=0.45.5",
    "cmap>=0.6.2",
    "datasets>=3.5.0",
    "einops>=0.8.1",
    "hf-xet>=1.1.9",
    "jaxtyping>=0.3.2",
    "json5>=0.12.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.1",
    "openrouter-wrapper",
    "pandas>=2.2.3",
    "repeng",
    "seaborn>=0.13.2",
    "srsly>=2.5.1",
    "torch>=2.6.0",
    "transformers>=4.51.3",
    "umap-learn>=0.5.9.post2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "ruff>=0.8.3",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["llm_moral_foundations2"]

[tool.ruff]
line-length = 120

[tool.uv.sources]
openrouter-wrapper = { git = "https://github.com/wassname/openrouter_wrapper.git" }
repeng = { path = "../repeng", editable = true }
